# anyhttp

./: .clang-format  .cspell.json  .gitignore  .gitlab-ci.yml  64kminus1  CMakeLists.txt  README.md  callgrind.out.67604  crazy-chunked.txt  marp.md  nix  report.xml  simple-two.txt  test.pcap  test.svg.drawio
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/base/: Dockerfile  build-nghttp2-with-http3.sh
.github/: copilot-instructions.md
.github/instructions/: anyhttp.instructions.md
.github/workflows/: asan.yml  ci.yml  release.yml
cmake/: merge_profraw.cmake
etc/: darkbase-chain.pem  darkbase-key.pem  root.pem
include/anyhttp/: any_async_stream.hpp  beast_session.hpp  client.hpp  client_impl.hpp  common.hpp  concepts.hpp  detect_http2.hpp  detect_ssl.hpp  formatter.hpp  literals.hpp  logging.hpp  nghttp2_common.hpp  nghttp2_session.hpp  nghttp2_stream.hpp  request_handlers.hpp  server.hpp  server_impl.hpp  session.hpp  session_impl.hpp  stream.hpp  timer_range.hpp  utils.hpp
include/anyhttp/beast/: session.hpp
include/anyhttp/detail/: nghttp2_session_details.hpp
pki/: config.json  create.sh  intermediate.json  root.json  server.json
src/: CMakeLists.txt  beast_issue_3032.cpp  beast_session.cpp  capy_corosio_minimal_main.cpp  client.cpp  client_impl.cpp  client_impl.cpp-spawn  client_main.cpp  common.cpp  detect_http2.hpp  hello.cpp  nghttp2_session.cpp  nghttp2_stream.cpp  ngtcp-test_main.cpp  request_handlers.cpp  server.cpp  server_impl.cpp  server_impl_udp.cpp  server_main.cpp  server_prototype.cpp  session.cpp  stream.cpp  utils.cpp
src/ngtcp2/: CMakeLists.txt  README.md  network.h  server.cc  shared.cc  siphash.cc  util.cc
src/research/: sender.cpp
test/: CMakeLists copy.txt  CMakeLists.txt  test_asio.cpp  test_capy.cpp  test_formatter.cpp  test_gtest.cpp  test_server.cpp
test/data/: 1m  64k
